--- a/_config.yml
+++ b/_config.yml
@@ -24,4 +24,4 @@ web_control_screenshot: https://foldingathome.org/wp-content/uploads/2016/09/WIG
 # stats uses assets/stats-stats.js to fetch data from stats.foldingathome.org/api
 # api uses assets/stats-api.js to fetch data from api.foldingathome.org
 # Preferred Option: stats
-stats_source: stats
+stats_source: api
